# YongYiHanYong

./: .gitignore  README.md
src/doosan-robot2/: README.md
src/doosan-robot2/.devcontainer/: Dockerfile  devcontainer.json  post-command.sh
src/doosan-robot2/dsr_bringup2/: package.xml  setup.py
src/doosan-robot2/dsr_bringup2/dsr_bringup2/: controller_config.py  gazebo_connection.py  run_emulator.py  set_config.py
src/doosan-robot2/dsr_bringup2/launch/: dsr_bringup2_gazebo.launch.py  dsr_bringup2_moveit.launch.py  dsr_bringup2_rviz.launch.py  dsr_bringup2_spawn_on_gazebo.launch.py
src/doosan-robot2/dsr_common2/: package.xml
src/doosan-robot2/dsr_common2/imp/: DRFC.py  DR_common2.py  DR_error2.py  DR_init.py  DR_tcp_client2.py  DR_tcp_server2.py  DSR_ROBOT2.py  DSR_util2.py  __init__.py
src/doosan-robot2/dsr_common2/include/: DRFC.h  DRFL.h  DRFLEx.h  DRFS.h  dsr_robot.h  dsr_serial.h  dsr_util.h
src/doosan-robot2/dsr_common2/src/: dsr_robot.cpp  dsr_serial.cpp
src/doosan-robot2/dsr_controller2/: CMakeLists.txt
src/doosan-robot2/dsr_controller2/config/: dsr_controller2.yaml
src/doosan-robot2/dsr_description2/: CMakeLists.txt  package.xml
src/doosan-robot2/dsr_gazebo2/: CMakeLists.txt  package.xml
src/doosan-robot2/dsr_hardware2/: CMakeLists.txt  package.xml
src/doosan-robot2/dsr_msgs2/: CMakeLists.txt  package.xml
src/llm_pkg/: package.xml  setup.py
src/llm_pkg/llm_pkg/: llm_trigger_client.py  llm_trigger_server.py
src/pick_and_place_voice_new/: package.xml  setup.cfg  setup.py
src/pick_and_place_voice_new/pick_and_place_voice_new/: MicController.py  cli.py  get_keyword.py  stt.py  wakeup_word.py
src/pick_and_place_voice_new/resource/: .env
src/yolo_realsense/: CMakeLists.txt  README.md  package.xml  setup.py
src/yolo_realsense/launch/: yolo_all.launch.py
src/yolo_realsense/yolo_realsense/: picxel2world copy.py  picxel2world.py  yolo_depth_viewer.py
(+68 files in other folders)
