<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pick_and_place_voice_new</name>
  <version>0.0.0</version>
  <description>Pick and Place Voice Control Package</description>
  <maintainer email="rokey4090@example.com">rokey4090</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>ament_index_python</depend>
  
  <!-- Python packages for voice processing and LLM -->
  <exec_depend>python3-langchain</exec_depend>
  <exec_depend>python3-langchain-core</exec_depend>
  <exec_depend>python3-langchain-openai</exec_depend>
  <exec_depend>python3-dotenv</exec_depend>
  <exec_depend>python3-openai</exec_depend>
  <exec_depend>python3-sounddevice</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-openwakeword</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
